# people_detection

./: CMakeLists.txt  README.md  package.xml
include/people_detection/: people_detector.hpp
models/: coco.names  test_mnnx_runtime.py
src/: people_detector.cpp  test_opencv  test_opencv.cpp
