<?xml version="1.0"?>
<package format="3">
  <name>people_detection</name>
  <version>0.0.1</version>
  <description>YOLOv5を使用した人検出ノード</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
